--- a/project2/index.html
+++ b/project2/index.html
@@ -14,7 +14,7 @@
   <main class="container">
     <section class="popup" id="firstStep">
       <div class="icon-div">
-        <img src="images/icon-star.svg"/>
+        <img src="images/icon-star.svg" alt="star-icon"/>
       </div>
 
       <h1>How did we do?</h1>
